--- a/style.css
+++ b/style.css
@@ -16,28 +16,28 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
 
 @font-face {
   font-family: "Graphik";
-  src: url(https://wordpress-744145-3932025.cloudwaysapps.com/wp-content/themes/ddinstitutional/fonts/GraphikRegular.otf);
+  src: url(fonts/GraphikRegular.otf);
   font-weight: 400;
   font-display: swap;
 }
 
 @font-face {
   font-family: "Graphik";
-  src: url(https://wordpress-744145-3932025.cloudwaysapps.com/wp-content/themes/ddinstitutional/fonts/GraphikLight.otf);
+  src: url(fonts/GraphikLight.otf);
   font-weight: 300;
   font-display: swap;
 }
 
 @font-face {
   font-family: "Graphik";
-  src: url(https://wordpress-744145-3932025.cloudwaysapps.com/wp-content/themes/ddinstitutional/fonts/GraphikSemibold.otf);
+  src: url(fonts/GraphikSemibold.otf);
   font-weight: 600;
   font-display: swap;
 }
 
 @font-face {
   font-family: "Graphik";
-  src: url(https://wordpress-744145-3932025.cloudwaysapps.com/wp-content/themes/ddinstitutional/fonts/GraphikBold.otf);
+  src: url(fonts/GraphikBold.otf);
   font-weight: 800;
   font-display: swap;
 }
