--- a/style.css
+++ b/style.css
@@ -133,7 +133,6 @@ a {
   .eael-testimonial-quote {
   position: relative;
   left: 0;
-  top: -20px;
 }
 
 ul.testimonial-star-rating {
@@ -175,6 +174,11 @@ ul.testimonial-star-rating {
   overflow: hidden;
   text-align: left;
   width: 100%;
+  height: 80px;
+}
+
+.pricing-testimonials .eael-testimonial-item .eael-testimonial-item-inner {
+  height: 100%;
 }
 
 .pricing-testimonials p.eael-testimonial-user-company {
@@ -217,6 +221,20 @@ ul.testimonial-star-rating {
   font-size: 1.4rem;
   font-weight: 600;
   margin-top: 20px;
+}
+
+.slick-next {
+  right: -30px !important;
+  z-index: 3;
+  background: none !important;
+  font-size: 0 !important;
+}
+
+.slick-prev {
+  left: -60px !important;
+  z-index: 3;
+  background: none !important;
+  font-size: 0 !important;
 }
 
 /*MEDIA QUERIES*/
